--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -7,6 +7,11 @@
         padding-top: 80px;
         padding-bottom: 80px;
 
+        &.container {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
         .row {
             align-items: center;
         }
@@ -14,6 +19,11 @@
         @include mq($until: lg) {
             padding-top: 30px;
             padding-bottom: 30px;
+
+            &.container {
+                padding-left: 20;
+                padding-right: 20;
+            }
         }
     }
 
@@ -54,9 +64,13 @@
 
         }
 
-        @include mq($until: lg) {
+        @include mq($until: 1500px) {
             li {
                 font-size: 14px;
+
+                a {
+                    overflow-wrap: anywhere;
+                }
             }
         }
     }
