--- a/src/assets/scss/components/_service.scss
+++ b/src/assets/scss/components/_service.scss
@@ -1,6 +1,6 @@
 .service {
     position: relative;
-    z-index: 3;
+    z-index: 4;
 
     @include mq($until: lg) {
         overflow: hidden;
@@ -16,10 +16,16 @@
             margin-left: -7.5px;
             margin-right: -7.5px;
 
-            .col {
+            .col-12 {
                 padding-left: 7.5px;
                 padding-right: 7.5px;
                 position: relative;
+            }
+        }
+
+        @include mq($until: lg, $and: false, $from: md) {
+            .row {
+                justify-content: center;
             }
         }
     }
@@ -114,6 +120,13 @@
             p {
                 font-size: 16px;
             }
+        }
+
+        @include mq($until: lg, $and: false, $from: md) {
+            h3 {
+                max-width: 240px;
+            }
+
         }
     }
 }
